# hydromet-weather-pulse

./: .gitignore  commands.txt
backend/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/config/: __init__.py  settings.py  urls.py
backend/docs/: TODO.md
backend/notifications/: admin.py  apps.py  firebase.py  interfaces.py  models.py  services.py  tasks.py  types.py  urls.py  views.py
backend/notifications/channels/: expo.py  fcm.py  telegram.py
backend/notifications/migrations/: 0001_initial.py  0002_per_device_read.py
backend/stations/: admin.py  bootstrap.py  config.py  models.py  tasks.py  urls.py  views.py  windows.py
backend/stations/management/commands/: seed_stations.py
backend/stations/migrations/: 0001_initial.py  0002_station_latitude_station_longitude_station_password.py
backend/telegram_bot/: admin.py  bot.py  handlers.py  models.py  sender.py  urls.py  views.py
backend/telegram_bot/management/commands/: run_telegram_bot.py  set_bot_menu.py  set_telegram_webhook.py
backend/telegram_bot/migrations/: 0001_initial.py
docs/: usability-test-sheet.md
frontend/: package-lock.json  package.json
mobile/: app.json  package-lock.json  package.json  tailwind.config.js
mobile/app/: _layout.tsx
mobile/components/: LangPicker.tsx  LoginModal.tsx  StationCard.tsx  SubmitForm.tsx  SynopInput.tsx  WindowStatusCard.tsx
mobile/context/: NotificationsContext.tsx
mobile/hooks/: useNotifications.ts  useStations.ts  useWindowStatus.ts
mobile/lib/: api.ts  auth.ts  deviceId.ts  format.ts  i18n.tsx  mapHtml.ts  (+1 more)
(+29 files in other folders)
